# dmanuel64.github.io

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  Trunk.toml  index.html  package-lock.json  tailwind.config.js
.github/workflows/: deploy.yml
src/: app.rs  components.rs  errors.rs  icons.rs  main.rs  pages.rs  utils.rs
src/components/: backdrops.rs  footer.rs  navbar.rs  section.rs
src/content/projects/: codablellm.md
src/pages/: home.rs  not_found.rs  projects.rs  resume.rs
styles/: style.css
