[package]
name = "dmanuel64-site"
version = "0.1.0"
edition = "2021"

[dependencies]
console_error_panic_hook = { version = "0.1.7", optional = true }
icondata_ai = "0.0.10"
icondata_core = "0.1.0"
leptos = { version = "0.6.15", features = ["csr", "nightly"] }
leptos-use = "0.13.11"
leptos_router = { version = "0.6.15", features = ["csr"] }
thaw = { version = "0.3.4", features = ["csr"] }
trunk = "0.21.4"

[features]
dev = ["dep:console_error_panic_hook"]
